# lm-pseudoperplexity-evaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt
sandbox/: load_analysis.py  medical_span_perplexity_scoring.ipynb  perplexity_distribution.ipynb  perplexity_scoring.ipynb
src/pppl/: __init__.py  backends.py  backends_medical_span.py  config.py  ppl.py  ppl_alt.py  ppl_viz.py  span_utils.py
